update _meta data

--- a/meta_dataekstraction.ipynb
+++ b/meta_dataekstraction.ipynb
@@ -244,7 +244,7 @@
     "            save_npy_loc = f\"{buff_folder}/building_{mdi}.npy\"\n",
     "            map_data[mdi][\"path_all_data\"] = save_npy_loc\n",
     "            np.save(f\"{buff_folder}/building_{mdi}.npy\",all_data,allow_pickle=True)\n",
-    "        save_meta_data(map_data_json[i][:-5],map_data)\n",
+    "        save_meta_data(f\"building_{map_data_json[i][:-5]}\",map_data)\n",
     " "
    ]
   },
