pcl installation, map ins with all data,data undestanding initial.

--- a/meta_dataekstraction.ipynb
+++ b/meta_dataekstraction.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1018 1019 1020 1021 1022 1023 1024 1025 1026 1027 1028 1029 1030 1031\n",
-      " 1032 3273 3538 3539 3722 3723 3724 3725 3726 3727 3728 3729 3730 3731\n",
-      " 3876 3877 3878 3879 3880 3881 3882 3883 3884 3885 3886 3887 3888 3889\n",
-      " 3976 3977 3978 3979 3980 3981 3982 3983 3984 3993 3994]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buff = glob.glob(f\"{PATH}/T_316000_233500_NE_T_316000_233500_SW/**.txt\")\n",
     "data = np.array([i.split(\"/\") for i in buff if \"building\" in i or \"buidling\" in i])\n",
@@ -99,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:00<00:00, 14.60it/s]\n"
+      "100%|██████████| 13/13 [00:01<00:00,  8.59it/s]\n"
      ]
     }
    ],
@@ -146,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,39 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
-    "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST) :   \n",
-    "    for i in tqdm.tqdm(range(len(map_data_json))):\n",
-    "        print(i)\n",
-    "        map_data = read_meta_data(map_data_json[i])[\"building\"]\n",
-    "        buff_folder = f\"all_data_building/{map_data_json[i][8:-5]}\"\n",
-    "        os.makedirs(buff_folder,exist_ok=True)\n",
-    "        map_data_id= list(map_data.keys())\n",
-    "        for mdi in map_data_id:\n",
-    "            list_data_txt = map_data[mdi][\"path\"]\n",
-    "            # Start from init = 0 and append until last\n",
-    "            print(mdi)\n",
-    "            all_data = np.loadtxt(f\"Dataset/{list_data_txt[0]}\")[:,:6]\n",
-    "            try:\n",
-    "                for idx in range(1,len(list_data_txt)):\n",
-    "                    buff = np.loadtxt(f\"Dataset/{list_data_txt[idx]}\")[:,:6]\n",
-    "                    all_data = np.append(all_data,buff,axis=0)\n",
-    "            except :\n",
-    "                pass\n",
-    "            save_npy_loc = f\"{buff_folder}/building_{mdi}.npy\"\n",
-    "            map_data[mdi][\"path_all_data\"] = save_npy_loc\n",
-    "            np.save(f\"{buff_folder}/building_{mdi}.npy\",all_data,allow_pickle=True)\n",
-    "        save_meta_data(f\"building_{map_data_json[i][:-5]}\",map_data)\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 1/13 [02:05<25:05, 125.50s/it]"
+      "  8%|▊         | 1/13 [03:10<38:11, 190.95s/it]"
      ]
     },
     {
@@ -422,7 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 2/13 [05:18<30:15, 165.02s/it]"
+      " 15%|█▌        | 2/13 [09:10<53:13, 290.34s/it]"
      ]
     },
     {
@@ -494,7 +451,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|██▎       | 3/13 [11:45<44:26, 266.68s/it]"
+      " 23%|██▎       | 3/13 [23:06<1:29:52, 539.24s/it]"
      ]
     },
     {
@@ -636,7 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 31%|███       | 4/13 [15:47<38:31, 256.83s/it]"
+      " 31%|███       | 4/13 [32:10<1:21:11, 541.32s/it]"
      ]
     },
     {
@@ -717,7 +674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 38%|███▊      | 5/13 [19:34<32:47, 245.92s/it]"
+      " 38%|███▊      | 5/13 [39:25<1:07:04, 503.02s/it]"
      ]
     },
     {
@@ -925,7 +882,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 46%|████▌     | 6/13 [25:20<32:41, 280.19s/it]"
+      " 46%|████▌     | 6/13 [50:54<1:06:03, 566.17s/it]"
      ]
     },
     {
@@ -1027,21 +984,21 @@
       "091\n",
       "092\n",
       "093\n",
-      "094\n"
+      "094\n",
+      "095\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 54%|█████▍    | 7/13 [29:45<27:31, 275.22s/it]"
+      " 54%|█████▍    | 7/13 [59:23<54:43, 547.29s/it]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "095\n",
       "7\n",
       "000\n",
       "001\n",
@@ -1111,7 +1068,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 62%|██████▏   | 8/13 [32:52<20:35, 247.17s/it]"
+      " 62%|██████▏   | 8/13 [1:05:39<41:03, 492.76s/it]"
      ]
     },
     {
@@ -1158,7 +1115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 69%|██████▉   | 9/13 [34:59<13:57, 209.41s/it]"
+      " 69%|██████▉   | 9/13 [1:08:49<26:32, 398.20s/it]"
      ]
     },
     {
@@ -1268,7 +1225,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 77%|███████▋  | 10/13 [38:22<10:22, 207.40s/it]"
+      " 77%|███████▋  | 10/13 [1:12:32<17:12, 344.07s/it]"
      ]
     },
     {
@@ -1326,212 +1283,36 @@
       "047\n",
       "048\n",
       "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n",
-      "081\n",
-      "082\n",
-      "083\n",
-      "084\n",
-      "085\n",
-      "086\n",
-      "087\n",
-      "088\n",
-      "089\n",
-      "090\n",
-      "091\n",
-      "092\n",
-      "093\n",
-      "094\n",
-      "095\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 85%|████████▍ | 11/13 [41:48<06:54, 207.12s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 92%|█████████▏| 12/13 [45:09<03:25, 205.11s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13/13 [49:56<00:00, 230.53s/it]\n"
+      "050\n"
      ]
     }
    ],
    "source": [
+    "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
+    "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST) :   \n",
+    "    for i in tqdm.tqdm(range(len(map_data_json))):\n",
+    "        print(i)\n",
+    "        map_data = read_meta_data(map_data_json[i])[\"building\"]\n",
+    "        buff_folder = f\"all_data_building/{map_data_json[i][8:-5]}\"\n",
+    "        os.makedirs(buff_folder,exist_ok=True)\n",
+    "        map_data_id= list(map_data.keys())\n",
+    "        for mdi in map_data_id:\n",
+    "            list_data_txt = map_data[mdi][\"path\"]\n",
+    "            # Start from init = 0 and append until last\n",
+    "            print(mdi)\n",
+    "            all_data = np.loadtxt(f\"Dataset/{list_data_txt[0]}\")[:,:6]\n",
+    "            try:\n",
+    "                for idx in range(1,len(list_data_txt)):\n",
+    "                    buff = np.loadtxt(f\"Dataset/{list_data_txt[idx]}\")[:,:6]\n",
+    "                    all_data = np.append(all_data,buff,axis=0)\n",
+    "            except :\n",
+    "                pass\n",
+    "            save_npy_loc = f\"{buff_folder}/building_{mdi}.npy\"\n",
+    "            map_data[mdi][\"path_all_data\"] = save_npy_loc\n",
+    "            np.savetxt(f\"{buff_folder}/building_{mdi}.txt\",all_data,fmt='%1.9f %1.9f %1.9f %i %i %i')\n",
+    "        old_map = read_meta_data(map_data_json[i])\n",
+    "        old_map[\"building\"]= map_data\n",
+    "        save_meta_data(f\"{map_data_json[i][:-5]}\",old_map)\n",
     "get_combining_building_data()"
    ]
   }
