--- a/meta_dataekstraction.ipynb
+++ b/meta_dataekstraction.ipynb
@@ -95,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:01<00:00,  8.59it/s]\n"
+      "100%|██████████| 13/13 [00:00<00:00, 15.03it/s]\n"
      ]
     }
    ],
@@ -214,1076 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/13 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 1/13 [03:10<38:11, 190.95s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 15%|█▌        | 2/13 [09:10<53:13, 290.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 23%|██▎       | 3/13 [23:06<1:29:52, 539.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n",
-      "081\n",
-      "082\n",
-      "083\n",
-      "084\n",
-      "085\n",
-      "086\n",
-      "087\n",
-      "088\n",
-      "089\n",
-      "090\n",
-      "091\n",
-      "092\n",
-      "093\n",
-      "094\n",
-      "095\n",
-      "096\n",
-      "097\n",
-      "098\n",
-      "099\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 31%|███       | 4/13 [32:10<1:21:11, 541.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "128\n",
-      "4\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 5/13 [39:25<1:07:04, 503.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n",
-      "081\n",
-      "082\n",
-      "083\n",
-      "084\n",
-      "085\n",
-      "086\n",
-      "087\n",
-      "088\n",
-      "089\n",
-      "090\n",
-      "091\n",
-      "092\n",
-      "093\n",
-      "094\n",
-      "095\n",
-      "096\n",
-      "097\n",
-      "098\n",
-      "099\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "157\n",
-      "158\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "169\n",
-      "170\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "176\n",
-      "177\n",
-      "178\n",
-      "179\n",
-      "180\n",
-      "181\n",
-      "182\n",
-      "183\n",
-      "184\n",
-      "185\n",
-      "186\n",
-      "187\n",
-      "188\n",
-      "189\n",
-      "190\n",
-      "191\n",
-      "194\n",
-      "197\n",
-      "198\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|████▌     | 6/13 [50:54<1:06:03, 566.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n",
-      "081\n",
-      "082\n",
-      "083\n",
-      "084\n",
-      "085\n",
-      "086\n",
-      "087\n",
-      "088\n",
-      "089\n",
-      "090\n",
-      "091\n",
-      "092\n",
-      "093\n",
-      "094\n",
-      "095\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 54%|█████▍    | 7/13 [59:23<54:43, 547.29s/it]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 8/13 [1:05:39<41:03, 492.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 69%|██████▉   | 9/13 [1:08:49<26:32, 398.20s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n",
-      "051\n",
-      "052\n",
-      "053\n",
-      "054\n",
-      "055\n",
-      "056\n",
-      "057\n",
-      "058\n",
-      "059\n",
-      "060\n",
-      "061\n",
-      "062\n",
-      "063\n",
-      "064\n",
-      "065\n",
-      "066\n",
-      "067\n",
-      "068\n",
-      "069\n",
-      "070\n",
-      "071\n",
-      "072\n",
-      "073\n",
-      "074\n",
-      "075\n",
-      "076\n",
-      "077\n",
-      "078\n",
-      "079\n",
-      "080\n",
-      "081\n",
-      "082\n",
-      "083\n",
-      "084\n",
-      "085\n",
-      "086\n",
-      "087\n",
-      "088\n",
-      "089\n",
-      "090\n",
-      "091\n",
-      "092\n",
-      "093\n",
-      "094\n",
-      "095\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 10/13 [1:12:32<17:12, 344.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "000\n",
-      "001\n",
-      "002\n",
-      "003\n",
-      "004\n",
-      "005\n",
-      "006\n",
-      "007\n",
-      "008\n",
-      "009\n",
-      "010\n",
-      "011\n",
-      "012\n",
-      "013\n",
-      "014\n",
-      "015\n",
-      "016\n",
-      "017\n",
-      "018\n",
-      "019\n",
-      "020\n",
-      "021\n",
-      "022\n",
-      "023\n",
-      "024\n",
-      "025\n",
-      "026\n",
-      "027\n",
-      "028\n",
-      "029\n",
-      "030\n",
-      "031\n",
-      "032\n",
-      "033\n",
-      "034\n",
-      "035\n",
-      "036\n",
-      "037\n",
-      "038\n",
-      "039\n",
-      "040\n",
-      "041\n",
-      "042\n",
-      "043\n",
-      "044\n",
-      "045\n",
-      "046\n",
-      "047\n",
-      "048\n",
-      "049\n",
-      "050\n"
+      "100%|██████████| 13/13 [37:03<00:00, 171.02s/it]\n"
      ]
     }
    ],
@@ -1291,7 +222,6 @@
     "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
     "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST) :   \n",
     "    for i in tqdm.tqdm(range(len(map_data_json))):\n",
-    "        print(i)\n",
     "        map_data = read_meta_data(map_data_json[i])[\"building\"]\n",
     "        buff_folder = f\"all_data_building/{map_data_json[i][8:-5]}\"\n",
     "        os.makedirs(buff_folder,exist_ok=True)\n",
@@ -1299,7 +229,6 @@
     "        for mdi in map_data_id:\n",
     "            list_data_txt = map_data[mdi][\"path\"]\n",
     "            # Start from init = 0 and append until last\n",
-    "            print(mdi)\n",
     "            all_data = np.loadtxt(f\"Dataset/{list_data_txt[0]}\")[:,:6]\n",
     "            try:\n",
     "                for idx in range(1,len(list_data_txt)):\n",
@@ -1309,10 +238,10 @@
     "                pass\n",
     "            save_npy_loc = f\"{buff_folder}/building_{mdi}.npy\"\n",
     "            map_data[mdi][\"path_all_data\"] = save_npy_loc\n",
-    "            np.savetxt(f\"{buff_folder}/building_{mdi}.txt\",all_data,fmt='%1.9f %1.9f %1.9f %i %i %i')\n",
+    "            np.save(f\"{buff_folder}/building_{mdi}.npy\",all_data,allow_pickle=True)\n",
     "        old_map = read_meta_data(map_data_json[i])\n",
     "        old_map[\"building\"]= map_data\n",
-    "        save_meta_data(f\"{map_data_json[i][:-5]}\",old_map)\n",
+    "        save_meta_data(f\"{map_data_json[i][8:-5]}\",old_map)\n",
     "get_combining_building_data()"
    ]
   }
