"make all of area"

--- a/meta_dataekstraction.ipynb
+++ b/meta_dataekstraction.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_data = read_meta_data(\"map_ins_T_315500_234500_NW.json\")\n",
+    "meta_data= read_meta_data(\"Dataset/T_315500_234500_NW/meta_data.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vegetation_bush_01',\n",
+       " 'vegetation_bush_02',\n",
+       " 'vegetation_bush_03',\n",
+       " 'vegetation_bush_04',\n",
+       " 'vegetation_bush_05',\n",
+       " 'vegetation_bush_06',\n",
+       " 'vegetation_bush_07',\n",
+       " 'vegetation_bush_08',\n",
+       " 'vegetation_bush_09',\n",
+       " 'vegetation_bush_10',\n",
+       " 'vegetation_bush_11',\n",
+       " 'vegetation_bush_12',\n",
+       " 'vegetation_bush_13',\n",
+       " 'vegetation_bush_14',\n",
+       " 'vegetation_bush_15',\n",
+       " 'vegetation_tree_01',\n",
+       " 'vegetation_tree_02',\n",
+       " 'vegetation_tree_03',\n",
+       " 'vegetation_tree_04',\n",
+       " 'vegetation_tree_05',\n",
+       " 'vegetation_tree_06',\n",
+       " 'vegetation_tree_07',\n",
+       " 'vegetation_tree_08',\n",
+       " 'vegetation_tree_09',\n",
+       " 'vegetation_tree_10',\n",
+       " 'vegetation_tree_11',\n",
+       " 'vegetation_tree_12',\n",
+       " 'vegetation_tree_13',\n",
+       " 'vegetation_tree_14',\n",
+       " 'vegetation_tree_15',\n",
+       " 'vegetation_tree_16',\n",
+       " 'vegetation_tree_17',\n",
+       " 'vegetation_tree_18',\n",
+       " 'vegetation_tree_19',\n",
+       " 'vegetation_tree_20',\n",
+       " 'vegetation_tree_21',\n",
+       " 'vegetation_tree_22',\n",
+       " 'vegetation_tree_23',\n",
+       " 'vegetation_tree_24',\n",
+       " 'vegetation_tree_25',\n",
+       " 'vegetation_tree_26',\n",
+       " 'vegetation_tree_27',\n",
+       " 'vegetation_tree_28',\n",
+       " 'vegetation_tree_29',\n",
+       " 'vegetation_tree_30',\n",
+       " 'vegetation_tree_31',\n",
+       " 'vegetation_tree_32',\n",
+       " 'vegetation_tree_33',\n",
+       " 'vegetation_tree_34',\n",
+       " 'vegetation_tree_35',\n",
+       " 'vegetation_tree_36',\n",
+       " 'vegetation_tree_37',\n",
+       " 'vegetation_tree_38',\n",
+       " 'vegetation_tree_39',\n",
+       " 'vegetation_tree_40',\n",
+       " 'vegetation_tree_41',\n",
+       " 'vegetation_tree_42',\n",
+       " 'vegetation_tree_43',\n",
+       " 'vegetation_tree_44',\n",
+       " 'vegetation_tree_45',\n",
+       " 'vegetation_tree_46',\n",
+       " 'vegetation_tree_47',\n",
+       " 'vegetation_tree_48',\n",
+       " 'vegetation_tree_49',\n",
+       " 'vegetation_tree_50',\n",
+       " 'vegetation_tree_51',\n",
+       " 'vegetation_tree_52',\n",
+       " 'vegetation_tree_53',\n",
+       " 'vegetation_tree_54',\n",
+       " 'vegetation_tree_55',\n",
+       " 'vegetation_tree_56',\n",
+       " 'vegetation_tree_57',\n",
+       " 'vegetation_tree_58',\n",
+       " 'vegetation_tree_59',\n",
+       " 'vegetation_tree_60',\n",
+       " 'vegetation_tree_61',\n",
+       " 'vegetation_tree_62',\n",
+       " 'vegetation_tree_63',\n",
+       " 'vegetation_tree_64',\n",
+       " 'vegetation_tree_65',\n",
+       " 'vegetation_tree_66',\n",
+       " 'vegetation_tree_67',\n",
+       " 'vegetation_tree_68']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_data[\"vegetation\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +264,12 @@
     "            except:\n",
     "                sub_class,key_id=key,0\n",
     "                \n",
-    "        inst_id[str(count).zfill(3)]={\n",
-    "            \"total_point\": meta_data[key][\"jumlah_point\"],\n",
-    "            \"path\": meta_data[key][\"path\"],\n",
-    "            \"sub_class\": sub_class,\n",
-    "            \"id\": str(int(key_id)-1).zfill(3)\n",
-    "            }\n",
+    "            inst_id[str(count).zfill(3)]={\n",
+    "                \"total_point\": meta_data[key][\"jumlah_point\"],\n",
+    "                \"path\": meta_data[key][\"path\"],\n",
+    "                \"sub_class\": sub_class,\n",
+    "                \"id\": str(int(key_id)-1).zfill(3)\n",
+    "                }\n",
     "    except Exception as e:\n",
     "        print(class_name)\n",
     "        print(meta_data[class_name])\n",
@@ -195,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +356,36 @@
     "        save_meta_data(f\"{map_data_json[i][8:-5]}\",old_map)\n",
     "get_combining_building_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_build    = glob.glob(\"T_**\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for id_ in range(len(map_build)):\n",
+    "#     building_metadata = read_meta_data(map_build[id_])[\"building\"]\n",
+    "#     map_ins = read_meta_data(f\"map_ins_{map_build[id_]}\")\n",
+    "#     map_ins.pop(\"building\")\n",
+    "#     map_ins[\"building\"]=building_metadata\n",
+    "#     save_meta_data(map_build[id_][:-5],map_ins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
